--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ pyee==11.1.0
 Pygments==2.17.2
 pylibsrtp==0.10.0
 pyOpenSSL==24.1.0
+pytesseract==0.3.10
 python-dateutil==2.9.0.post0
 pytz==2024.1
 referencing==0.35.0
