--- a/requirements.txt
+++ b/requirements.txt
@@ -11,24 +11,46 @@ charset-normalizer==3.3.2
 click==8.1.7
 cryptography==42.0.5
 dnspython==2.6.1
+easyocr==1.7.1
+filelock==3.14.0
+fsspec==2024.3.1
 gitdb==4.0.11
 GitPython==3.1.43
 google-crc32c==1.5.0
 idna==3.7
 ifaddr==0.2.0
+imageio==2.34.1
 Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+lazy_loader==0.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+mpmath==1.3.0
+networkx==3.3
+ninja==1.11.1.1
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
 opencv-contrib-python-headless==4.9.0.80
+opencv-python-headless==4.9.0.80
 packaging==24.0
 pandas==2.2.2
 pillow==10.3.0
 protobuf==4.25.3
 pyarrow==16.0.0
+pyclipper==1.3.0.post5
 pycparser==2.22
 pydeck==0.9.0b1
 pyee==11.1.0
@@ -37,20 +59,30 @@ pylibsrtp==0.10.0
 pymongo==4.7.0
 pyOpenSSL==24.1.0
 pytesseract==0.3.10
+python-bidi==0.4.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
+PyYAML==6.0.1
 referencing==0.35.0
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.0
+scikit-image==0.23.2
+scipy==1.13.0
+shapely==2.0.4
 six==1.16.0
 smmap==5.0.1
 streamlit==1.33.0
 streamlit-webrtc==0.47.6
+sympy==1.12
 tenacity==8.2.3
+tifffile==2024.4.24
 toml==0.10.2
 toolz==0.12.1
+torch==2.3.0
+torchvision==0.18.0
 tornado==6.4
+triton==2.3.0
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
